Now cli shows IslandField and playerBoards